--- a/Course-project/Frontend/Profile/profile.css
+++ b/Course-project/Frontend/Profile/profile.css
@@ -4,6 +4,38 @@
   padding: 0;
 }
 
+/* Basic error message styling */
+.error {
+  color: #D8000C; /* Red color */
+  background-color: #FFBABA;
+  border: 0.08em solid #D8000C;
+  padding: 1em;
+  border-radius: 0.5em;
+  font-size: 1.0em;
+  font-weight: bold; 
+  display: flex;
+  align-items: center;
+  max-width: 15%;
+  justify-content: flex-end;
+  margin-left: 80em;
+}
+
+/* Basic success message styling */
+.success {
+  color: #79f705; /* Red color */
+  background-color: #6188db;
+  border: 0.08em solid #0c0774;
+  padding: 1em;
+  border-radius: 0.5em;
+  font-size: 1.0em;
+  font-weight: bold; 
+  display: flex;
+  align-items: center;
+  max-width: 15%;
+  justify-content: flex-end;
+  margin-left: 80em;
+}
+
 body {
   background: linear-gradient(135deg, #5faaff, #7b91fe);
   font-family: Arial, sans-serif;
