--- a/Course-project/Frontend/Templates/Template1/Template.css
+++ b/Course-project/Frontend/Templates/Template1/Template.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: url('background-img.jpg') no-repeat center center fixed; /* Set the background image */
+    background: url('./Background.jpg') no-repeat center center fixed; /* Set the background image */
     background-size: cover;
     display: flex;
     justify-content: center;
