--- a/Course-project/Frontend/Templates/Template1/Template.html
+++ b/Course-project/Frontend/Templates/Template1/Template.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greeting Card</title>
-    <link rel="stylesheet" href="template-1.css">
-    <script src="../../Card_Box/load-sent-card-details.js"></script>
+    <link rel="stylesheet" href="./Template.css">
+    <script src="../../CardBox/LoadSentCardDetails.js"></script>
 </head>
 <body>
     <div class="card-container">
