--- a/Course-project/Frontend/CardBox/CardBox.css
+++ b/Course-project/Frontend/CardBox/CardBox.css
@@ -26,7 +26,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background: linear-gradient(135deg, #5faaff, #7b91fe);
     padding: 20px;
 }
 .container {
