--- a/Course-project/Frontend/CsvCards/CsvForm.css
+++ b/Course-project/Frontend/CsvCards/CsvForm.css
@@ -1,13 +1,12 @@
-/* Basic reset for consistent styling */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Basic error message styling */
 .error {
-    color: #D8000C; /* Red color */
+    color: #D8000C; 
     background-color: #FFBABA;
     border: 0.08em solid #D8000C;
     padding: 1em;
@@ -18,9 +17,8 @@
     align-items: center;
 }
 
-/* Basic success message styling */
 .success {
-    color: #79f705; /* Red color */
+    color: #79f705;
     background-color: #6188db;
     border: 0.08em solid #0c0774;
     padding: 1em;
