--- a/Course-project/Frontend/Templates/Template1/Template.html
+++ b/Course-project/Frontend/Templates/Template1/Template.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./Template.css">
     <script src="../../CardBox/LoadSentCardDetails.js"></script>
 </head>
-<body>
+<body id="main-container">
     <div class="card-container">
-        <div class="card">
-            <div class="card-header">
+        <div class="card" id="card">
+            <div class="card-header" id="card-header">
                 <h1>Greetings!</h1>
             </div>
-            <div class="card-body">
+            <div class="card-body"> <!--Added new class - attention-->
                 <p><strong id="source">To:</strong> <span id="username">[Recipient's Name]</span></p>
                 <p><strong>Occasion:</strong> <span id="occasion">[Occasion]</span></p>
                 <p><strong>Wish:</strong></p>
