--- a/Course-project/Frontend/Templates/Template1/Template.css
+++ b/Course-project/Frontend/Templates/Template1/Template.css
@@ -10,6 +10,7 @@ body {
     background: url('./Background.jpg') no-repeat center center fixed; /* Set the background image */
     background-size: cover;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -23,10 +24,14 @@ body {
 }
 
 .card {
-    background-color: #fff;
+    background-color: #fff; 
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     max-width: 500px;
+
+    color: #333;
+    font-size: 16px;
+    
     width: 100%;
     padding: 20px;
     text-align: center;
@@ -35,9 +40,37 @@ body {
     animation: fadeIn 0.5s ease-in-out;
 }
 
+/* .card {
+    background-color: #f8147b;
+    border-radius: 15px;
+    font-weight: bold;
+    color: #1efa9e;
+    font-size: 2em;
+}
+.card-header {
+    background-color: #baf810;
+    color: rgb(172, 6, 255);
+    font-style: italic;
+    font-weight: bold;
+} */
+
+/* Basic error message styling */
+.error {
+    color: #D8000C; /* Red color */
+    background-color: #FFBABA;
+    border: 0.08em solid #D8000C;
+    padding: 1em;
+    border-radius: 0.5em;
+    font-size: 1.0em;
+    font-weight: bold; 
+    display: flex;
+    align-items: center;
+    margin-top: 1em;
+}
+
 .card-header {
     background-color: #ff6b6b;
-    color: white;
+    color: rgb(255, 255, 255);
     padding: 10px 0;
     border-radius: 15px 15px 0 0;
     position: absolute;
@@ -54,12 +87,11 @@ body {
 .card-body {
     padding-top: 60px; /* Push content below header */
     padding-bottom: 20px;
-    color: #333;
 }
 
 .card-body p {
     margin: 10px 0;
-    font-size: 16px;
+    /* font-size: 16px; */
 }
 
 .card-body span {
