--- a/Course-project/Frontend/Templates/Template2/Template.html
+++ b/Course-project/Frontend/Templates/Template2/Template.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./Template.css">
     <script src="../../CardBox/LoadReceivedCards.js"></script>
 </head>
-<body>
+<body id="main-container">
     <div class="card-container">
-        <div class="card">
-            <div class="card-header">
+        <div class="card" id="card">
+            <div class="card-header" id="card-header">
                 <h1>Greetings!</h1>
             </div>
             <div class="card-body">
